Fix Long issues. Fix Date Issues